# v20-azure-clean

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Makefile  README.md  alembic.ini  firebase.json  pyproject.toml  requirements.txt
.claude/: settings.json  statusline.sh
.claude/agents/: reviewer.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  high-risk-paths  oncall.txt
.github/workflows/: break-glass-sla.yml  ci.yml  codeql.yml  deploy-backend.yml  deploy-frontend.yml  security-scan.yml
.project/: README.md  config.yaml  plan.md  stack.yaml
backend/: build.gradle.kts  settings.gradle.kts
backend/api-gateway/: Dockerfile
backend/sample-service/: Dockerfile
docs/adr/: README.md  adr-template.md
docs/audit/: log.md
docs/context/: engineer-standard.md
docs/data-model/: data-model-001.md
docs/product/: architecture.md  prd.md
docs/security/: security-intent-001.md
docs/specs/: README.md  spec-template.md
docs/tasks/: README.md  task.md
infra/k8s/: README.md  backendconfig.yaml  deployment.yaml  ingress.yaml  managedcertificate.yaml  migrate-job.yaml  service.yaml  serviceaccount.yaml
infra/terraform/: .gitignore  README.md  acr.tf  artifact_registry.tf  auth_outputs.tf  auth_variables.tf  backend.tf  cloudsql.tf  container_apps.tf  gke.tf  iam.tf  secret.tf  (+12 more)
runbooks/: break-glass.md  runbook.md
scripts/: bootstrap_repo.sh  emergency_merge.sh  install_hooks.py  pretool_security_check.py  record_deploy_approval.sh  security_precommit.py
security/: ai_sbom.json  security_rules.json
tests/: test_main.py
(+61 files in other folders)
