[project]
name = "v19-GCP-clean-teamsEnabled"
version = "0.1.0"
description = "v19-GCP-clean-teamsEnabled backend."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Pre-existing operational security scripts carry their own style; this slice
# lints the application code it introduces (src/, tests/, migrations).
extend-exclude = ["scripts", "src/data/migrations/script.py.mako"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
